- CSS fixes for info icon visiblity

--- a/app/styles/controllers/teacher/class/_student-learner-proficiency.scss
+++ b/app/styles/controllers/teacher/class/_student-learner-proficiency.scss
@@ -12,7 +12,7 @@
     > .student-proficiency-panel
     > .panel-header
     > .back {
-    display: none;
+    visibility: hidden;
   }
 }
 
